Fixing spelling and grammar mistakes

--- a/RF_loans.ipynb
+++ b/RF_loans.ipynb
@@ -17,7 +17,7 @@
     "For this project, I'll be applying the Decision Trees and Random Foresting models on this Loan Dataset obtained from LendingClub.com\n",
     "\n",
     "\n",
-    "# Dataset\n",
+    "## Dataset\n",
     "One thing we have to keep in mind is that this dataset was obtained for the 2007-2010 years, before Lending Club went public due to the controversies surrounding it in 2016. \n",
     "\n",
     "Here are what the columns represent:\n",
@@ -40,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Import"
+    "# Imports"
    ]
   },
   {
